--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="teacher-image">
                 <img src="images/teacher.png" alt="teacher vector" class="image-of-teacher">
             </div>
-            <button class="teacher-button">Teacher</button>
+            <button onclick="window.location.href = 'pages/login.html'" class="teacher-button">Teacher</button>
         </div>
         <div class="student-profile">
             <div class="student-image">
