basic changes made

--- a/pages/login.html
+++ b/pages/login.html
@@ -23,13 +23,14 @@
         <div class="all-Inputs-Container">
             <div class="username-container">
                 <form>
-                    <label for="email">username: <input type="email" id="email" class ="user-email" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required placeholder="enter your email" name="email"></label>
+                    <label for="email">email<input type="email" id="email" class ="user-email" pattern="/^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/" required placeholder="🔒 enter your email" name="email"></label>
                 </form>
             </div>
             <div class="password-container">
-                <label for="password">password: 
-                    <input type="password" id="password" name="password" required placeholder="type your password">
-                </label>
+                <form>
+                    <label for="password">password<input type="password" id="password" name="password" required placeholder="🔑 type your password">
+                    </label>
+                </form>
             </div>
             <div class="forgot-container">
                 <p>forgot password?</p>
