completed student front page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="student-image">
                 <img src="images/student.png" alt="student vector" class="image-of-student">
             </div>
-            <button class="student-button">Student</button>
+            <button class="student-button" onclick="window.location.href='pages/database.html'">Student</button>
         </div>
     </div>
     <footer>copyright content</footer>
