--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="main-container">
         <div class="teacher-profile">
             <div class="teacher-image">
-                <img src="images/teacher.png" alt="teacher vector" class="image-of-teacher">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><line x1="32" y1="64" x2="32" y2="144" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><path d="M54.2,216a88.1,88.1,0,0,1,147.6,0" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><polygon points="224 64 128 96 32 64 128 32 224 64" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><path d="M169.3,82.2a56,56,0,1,1-82.6,0" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/></svg>
             </div>
             <button onclick="window.location.href = 'pages/login.html'" class="teacher-button">Teacher</button>
         </div>
         <div class="student-profile">
             <div class="student-image">
-                <img src="images/student.png" alt="student vector" class="image-of-student">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 256"><rect width="256" height="256" fill="none"/><line x1="32" y1="64" x2="32" y2="144" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><path d="M54.2,216a88.1,88.1,0,0,1,147.6,0" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><polygon points="224 64 128 96 32 64 128 32 224 64" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/><path d="M169.3,82.2a56,56,0,1,1-82.6,0" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="8"/></svg>
             </div>
             <button class="student-button" onclick="window.location.href='pages/database.html'">Student</button>
         </div>
